--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
@@ -10,9 +13,13 @@
         "fruitcake/laravel-cors": "^2.0",
         "geoip2/geoip2": "~2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "yuraodessa/ipapigeoservice": "master",
+        "yuraodessa/libraryuseragent": "^4",
+        "yuraodessa/maxmind": "master",
+        "yuraodessa/plainuseragent": "^5",
+        "yuraodessa/yuriygeo": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -57,5 +64,15 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/yuralucky/maxmindgeoservice/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/yuralucky/ipapigeoservice/"
+        }
+    ]
 }
